fix hero button animation on mobile devices

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -114,6 +114,9 @@
     height: 30px;
     font-size: 15px;
   }
+  .hero__button:hover {
+    opacity: 100%;
+  }
 }
 
 @media (max-width: 480px) {
